# ifc-lite

./: .cursorrules  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  README.md  build-wasm.sh  mkdocs.yml  package.json  pnpm-lock.yaml  requirements-docs.txt  tsconfig.json
.changeset/: add-polygonal-face-set-processor.md  fix-section-plane.md  fix-ubuntu-setup.md  ifc5-federated-loading.md  magnetic-edge-snapping.md  zero-copy-performance.md
.github/workflows/: docs.yml  publish.yml  release.yml
apps/viewer/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/viewer/public/: ifc_lite_wasm_bg.wasm  manifest.json
apps/viewer/src/: App.tsx  index.css  main.tsx  store.ts  webgpu-types.d.ts
docs/: CHANGELOG_lod_geometry.md  IFC5-FEDERATED-LOADING-PLAN.md  ifc-lite-capability-verdict.md  ifc-lite-geometry.md  index.md
docs/api/: rust.md  typescript.md  wasm.md
docs/architecture/: data-flow.md  geometry-pipeline.md  overview.md  parsing-pipeline.md  rendering-pipeline.md
docs/contributing/: setup.md  testing.md
docs/guide/: browser-requirements.md  exporting.md  geometry.md  installation.md  parsing.md  querying.md  quickstart.md  rendering.md
docs/overrides/: .gitkeep
docs/stylesheets/: extra.css
docs/tutorials/: building-viewer.md  custom-queries.md  extending-parser.md
plan/: 01-overview-architecture.md  02-core-data-structures.md  03-parsing-pipeline.md  04-query-system.md  05-export-formats.md  07-api-reference.md  08-critical-solutions.md  09-geometry-pipeline-details.md  10-remaining-solutions.md  README.md
plan/viewer/: 01-overview-architecture.md  02-rendering-pipeline.md  03-data-management.md  04-ui-and-implementation.md  05-overhaul-plan.md  README.md
rust/: test_real_ifc.rs
rust/core/: Cargo.toml
rust/core/examples/: test_real_ifc.rs
rust/core/src/: decoder.rs  error.rs  lib.rs  parser.rs  schema.rs  schema_gen.rs  streaming.rs
rust/geometry/: Cargo.toml
rust/geometry/src/: csg.rs  extrusion.rs  lib.rs  mesh.rs  processors.rs  profile.rs  profiles.rs  router.rs  triangulation.rs
rust/wasm-bindings/: Cargo.toml
rust/wasm-bindings/src/: api.rs  lib.rs  utils.rs  zero_copy.rs
scripts/: add-license-headers.mjs  generate-lod-artifacts.mjs
tests/: compare-web-ifc.cjs  integration.test.ts  test-colors.ifc  test-coverage.cjs  test-integration.mjs  test.ifc  test_geometry.rs
tests/ifc/: 02_BIMcollab_Example_STR_random_C_ebkp.ifc
tests/models/ara3d/: ISSUE_005_haus.ifc  ISSUE_021_Mini Project.ifc  ISSUE_044_test_IFCCOMPOSITEPROFILEDEF.ifc  ISSUE_171_IfcSurfaceCurveSweptAreaSolid.ifc  KIT-Simple-Road-Test-Web-IFC4x3_RC2.ifc  Office_A_20110811.ifc  Sample_entities.ifc  duplex.ifc  example.ifc  tested_sample_project.ifc
tests/models/ifc5/: Domestic_Hot_Water_domestic-hot-water.ifc  Georeferencing_georeferenced-bridge-deck.ifc  Linear_placement_of_signals_linear-placement-of-signal.ifc  Railway_Railway_project_simple_IFC4X3.ifc
tmp/lod-out/: lod0_preview.json  lod1.glb
tmp/lod-out-2/: lod1.meta.json
(+64 files in other folders)
