[package]
name = "ifc-lite-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance IFC/STEP parser for building data"
keywords = ["ifc", "bim", "step", "parser", "aec"]
categories = ["parsing", "data-structures"]
readme = "../../README.md"
exclude = ["examples/test_real_ifc.rs"]

[dependencies]
# Parser
nom = "7.1"

# Error handling
thiserror = "1.0"

# Fast hashing
rustc-hash = "1.1"

# Fast byte searching
memchr = "2.7"

# Fast float/integer parsing (10x faster than std)
lexical-core = "1.0"

# Async streaming
futures-core = "0.3"
futures-util = "0.3"

# Optional: serialization
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
ifc-lite-geometry = { path = "../geometry" }

[features]
default = []
serde = ["dep:serde"]